--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "babelify": "^6.4.0",
     "vinyl-source-stream": "^1.1.0",
     "gulp-rimraf": "^0.2.0"
+  },
+  "dependencies": {
+    "component-styleguide": "^1.3.1"
   }
 }
