--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-filesize": "0.0.6",
     "gulp-ignore": "^1.2.1",
-    "gulp-imagemin": "^2.3.0",
+    // "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.8.1",
@@ -27,20 +27,18 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^1.2.3",
-    "gulp-svgmin": "^1.2.0",
+    // "gulp-svgmin": "^1.2.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.4",
     "moment": "^2.10.5",
-    "vinyl-ftp": "^0.4.4",
+    // "vinyl-ftp": "^0.4.4",
     "require-dir": "^0.3.0",
-    "browserify": "^11.2.0",
-    "babel": "^5.8.23",
-    "babelify": "^6.4.0",
+    // "browserify": "^11.2.0",
+    // "babel": "^5.8.23",
+    // "babelify": "^6.4.0",
     "vinyl-source-stream": "^1.1.0",
-    "gulp-rimraf": "^0.2.0"
-  },
-  "dependencies": {
+    "gulp-rimraf": "^0.2.0",
     "component-styleguide": "^1.3.1"
   }
 }
